--- a/css/equipos.css
+++ b/css/equipos.css
@@ -23,6 +23,10 @@
     }
     h4{
         font-weight: bold;
+        color: white;
+    }
+    h6{
+        color: rgb(151, 144, 144);
     }
 }
 
